[package]
name = "differustiation"
version = "0.1.0"
authors = ["RedTechKnight <bloodtechknight@protonmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "2.33.3",features = ["yaml"]}
anyhow = "1.0.32"
nom = "5.1.2"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = "0.7.3"
